# llm4teach-freetext-server

./: .gitignore  README.md  package.json  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: prompt.md
freetext/: AssignmentStore.py  config.example.py  create-example.ipynb  eda.ipynb  feedback_provider.py  llm4text_types.py  server.py  types.py
freetext/assignment_stores/: AssignmentStore.py  DynamoAssignmentStore.py  JSONFileAssignmentStore.py  __init__.py
freetext/feedback_providers/: EdgeGPTFeedbackProvider.py  FeedbackProvider.py  OpenAIFeedbackProvider.py  __init__.py
freetext/prompt_stores/: PlainTextPromptStore.py  PromptStore.py  __init__.py
freetext/response_stores/: DynamoResponseStore.py  JSONFileResponseStore.py  ResponseStore.py  __init__.py
freetext/templates/: assignment.html  paper.html  simple.html
prompts/default/grader/: draft_criteria.txt  draft_response.txt  feedback.txt  improve_question.txt
tests/: test_plain_text_prompt_store.py
