[tool.poetry]
name = "freetext"
version = "0.1.0"
description = ""
authors = ["Jordan Matelsky <matelsky@upenn.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
requests = "^2.30.0"
uvicorn = "^0.22.0"
guidance = "^0.0.55"
boto3 = "^1.26.146"
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "freetext.server:serve"
server-debug = "freetext.server:serve_debug"
