[project]
name = "freetext"
version = "0.1.0"
description = "Short-response text evaluation for education"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.23",
    "fastapi>=0.115.0",
    "guidance>=0.1.16",
    "mangum>=0.17.0",
    "openai>=1.47.0",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
]

[project.scripts]
server = "freetext.server:serve"
server-debug = "freetext.server:serve_debug"


[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

